--- a/nexus2/frontend/src/styles/Navbar.module.css
+++ b/nexus2/frontend/src/styles/Navbar.module.css
@@ -199,6 +199,7 @@
 .hamburger span::after {
     content: '';
     position: absolute;
+    left: 0;
     width: 18px;
     height: 2px;
     background: #b0b0b0;
